# python-artifactory-dependency-confusion-patch

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  requirements_test.txt
docs/: cloud_function_example.py  gcf_requirements.txt
python_artifactory_dependency_confusion_patch/: __init__.py  artifactory_service.py  lib_generator.py  main.py  notification_service.py  public_name_reserver.py  pypi_service.py
python_artifactory_dependency_confusion_patch/domain/: artifactory_body.py  library.py
python_artifactory_dependency_confusion_patch/lib_template/: README.md  __init__.py  pyproject.toml
test/: conftest.py
test/e2e/: test_e2e.py
test/integration/: test_pypi_service.py
test/resources/: .env.example  sample_input.json
test/unit/: test_artifactory.py  test_lib_gen.py  test_notification.py
