[project]
name = "{{project_name}}"
version = "0.0.0"
authors = [
    {name = "fix deps", email = "fix@python.deps"}
]
description = "A name reservation package"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
